# ai-engineering-standards

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
agentic/: agent-conventions.md  agents-md-template.md  claude-md-template.md  context-file-patterns.md
architecture/: adr-template.md  architecture-md-template.md
backlog/: TASK-001.yaml  TASK-002.yaml
checklists/: v1.0-release-checklist.md
code-style/databricks/: databricks-conventions.md
code-style/python/: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
code-style/sql/: sql-conventions.md
docs/: ADOPTION.md  PHILOSOPHY.md
documentation/: changelog-format.md  docstring-format.md  readme-template.md
error-handling/: exception-patterns.md  logging-format.md  retry-policy.md
git/: commit-message-format.md  pr-template.md  workflow.md
naming/: naming-conventions.md
review/: agent-review-checklist.md  human-review-checklist.md
security/: approved-dependencies.md  secret-scanning-config.yaml  security-standards.md
src/ai_standards/: __init__.py  checks.py  cli.py
testing/: coverage-requirements.md  test-naming.md  testing-strategy.md
tests/: conftest.py  test_checks.py  test_cli.py  test_v2_checks.py
