[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-engineering-standards"
version = "1.0.0"
description = "Standards validator CLI for agentic development projects"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Claus Eduard Petraeus"},
]
keywords = ["engineering-standards", "agentic", "validator", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
]

[project.scripts]
ai-standards = "ai_standards.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_standards"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "PIE",  # flake8-pie
    "PT",   # flake8-pytest-style
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function calls in defaults (Click uses this)
    "RET504", # unnecessary assignment before return
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PT004", "B011", "SIM300"]

[tool.ruff.lint.isort]
known-first-party = ["ai_standards"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers", "--strict-config", "--tb=short", "-ra"]

[tool.coverage.run]
source = ["src/ai_standards"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
